--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,11 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family:
+    Century Gothic,
+    CenturyGothic,
+    AppleGothic,
+    sans-serif;
 }
 
 body {
