--- a/src/components/mobile-meu/mobileMenu.css
+++ b/src/components/mobile-meu/mobileMenu.css
@@ -18,7 +18,6 @@
   flex-direction: column;
   align-items: center;
   transition: 0.6s;
-  padding: 20px;
   z-index: 1000000;
   animation: menu-appear 0.5s;
 }
@@ -32,12 +31,54 @@
   filter: grayscale(1);
 }
 
+.menu-profile {
+  width: 100%;
+  background-color: #3ce3e8;
+  padding: 10px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.menu-profile span {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  display: inline-block;
+  text-wrap: pretty;
+}
+.menu-profile .menu-link {
+  color: #05315a;
+  text-decoration: none;
+  font-size: 18px;
+  text-wrap: nowrap;
+}
+.menu-profile h2 {
+  margin-bottom: 10px;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+.menu-profile a {
+  text-decoration: none;
+}
+
+.menu-profile-pic {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 20px;
+}
+
 .menu-navigation {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 20px;
 }
-.menu-navigation a {
+.menu-navigation .menu-link {
   color: white;
   text-decoration: none;
   font-size: 20px;
