--- a/src/components/mobile-meu/mobileMenu.scss
+++ b/src/components/mobile-meu/mobileMenu.scss
@@ -23,7 +23,6 @@
   flex-direction: column;
   align-items: center;
   transition: 0.6s;
-  padding: 20px;
   z-index: 1000000;
   animation: menu-appear 0.5s;
 }
@@ -34,11 +33,51 @@
   animation: background-appear 0.5s;
   filter: grayscale(1);
 }
+.menu-profile {
+  width: 100%;
+  background-color: $base-light-blue;
+  padding: 10px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  span {
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    display: inline-block;
+    text-wrap: pretty;
+  }
+  .menu-link {
+    color: $base-dark-blue;
+    text-decoration: none;
+    font-size: 18px;
+    text-wrap: nowrap;
+  }
+  h2 {
+    margin-bottom: 10px;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+  }
+  a {
+    text-decoration: none;
+  }
+}
+.menu-profile-pic {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
+
 .menu-navigation {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  a {
+  padding: 20px;
+  .menu-link {
     color: white;
     text-decoration: none;
     font-size: 20px;
