--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -151,6 +151,7 @@
   .title-main {
     display: flex;
     background-color: rgba(6, 75, 140, 0.8);
+    height: 150px;
   }
   .title-main .title-poster-wraper {
     width: 100px;
@@ -188,22 +189,27 @@
   .title-episodes {
     position: static;
   }
+  .season-title {
+    width: 260px;
+  }
   .recently-added {
     width: 155px;
-    height: 240px;
+    height: 400px;
     display: flex;
     flex-direction: column;
   }
   .recently-added .title-poster-wraper {
     width: 100%;
     height: 100%;
+    margin-right: 0;
   }
   .recently-added .title-poster-wraper .poster {
     position: relative;
     width: 100%;
     max-width: 155px;
-    height: 100%;
-    max-height: 240px;
+    height: 240px;
+    -o-object-fit: fill;
+       object-fit: fill;
   }
   .title-main:hover::after {
     display: none;
