--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -155,6 +155,7 @@
   .title-main {
     display: flex;
     background-color: $background-trans;
+    height: 150px;
     .title-poster-wraper {
       width: 100px;
       height: 150px;
@@ -192,20 +193,24 @@
   .title-episodes {
     position: static;
   }
+  .season-title {
+    width: 260px;
+  }
   .recently-added {
     width: 155px;
-    height: 240px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     .title-poster-wraper {
       width: 100%;
       height: 100%;
+      margin-right: 0;
       .poster {
         position: relative;
         width: 100%;
         max-width: 155px;
-        height: 100%;
-        max-height: 240px;
+        height: 240px;
+        object-fit: fill;
       }
     }
   }
