--- a/src/components/catalogue-page/Pagination/Pagination.scss
+++ b/src/components/catalogue-page/Pagination/Pagination.scss
@@ -4,10 +4,10 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: -15px;
+  max-width: 100vw;
 }
 .pagination-load-more {
-  width: 20vw;
+  width: 50vw;
   height: 30px;
   margin: 0 auto;
   margin-bottom: 10px;
@@ -21,6 +21,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
+  max-width: 50%;
 }
 .catalogue-pagination {
   width: fit-content;
@@ -28,6 +29,7 @@
   justify-content: space-between;
   margin: 0 auto;
   gap: 10px;
+  max-width: 90vw;
 }
 .pagination-button {
   width: 30px;
@@ -41,6 +43,7 @@
   text-align: center;
   padding-top: 4px;
   font-size: 16px;
+  min-height: 30px;
 }
 .pagination-button.active {
   background-color: $base-light-blue;
@@ -48,5 +51,6 @@
   cursor: auto;
 }
 .pagination-button:disabled {
+  padding-top: 0;
   cursor: auto;
 }
