--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 .header {
   margin-top: 25px;
-  width: 100%;
+  width: 100vw;
   height: 60px;
   color: white;
   display: flex;
@@ -8,12 +8,14 @@
   border-bottom: 2px solid #3ce3e8;
   align-items: center;
   font-family: "Inter", sans-serif;
-  justify-content: center;
-  gap: 25px;
+  /* gap: 25px; */
   top: 0;
   z-index: 100000;
   opacity: 1;
   transition: border 0s, all 0.5s ease-in-out;
+  margin-bottom: 40px;
+  max-width: 100vw;
+  justify-content: center;
   margin-bottom: 40px;
 }
 .header a {
@@ -21,7 +23,6 @@
   font-style: normal;
   font-size: 22px;
   text-decoration: none;
-  margin-left: 20px;
 }
 .header .active {
   background-color: #3ce3e8;
@@ -38,7 +39,8 @@
   width: fit-content;
   display: flex;
 }
-.nav-buttons a {
+.nav-buttons a,
+.nav-buttons button {
   display: inline-flex;
   height: 100%;
   text-align: center;
@@ -47,10 +49,31 @@
   padding-left: 10px;
   padding-right: 10px;
   transition: 0.3s;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 20px;
 }
-.nav-buttons a:hover {
+.nav-buttons a:hover,
+.nav-buttons button:hover {
   background-color: #3ce3e8;
   color: #000000;
+}
+
+.catalogue-options.hide {
+  display: none;
+}
+
+.catalogue-options {
+  list-style-type: none;
+  background-color: #05315a;
+  position: absolute;
+  z-index: 10000;
+  border-bottom: 2px solid #3ce3e8;
+}
+
+.catalogue-option {
+  height: 40px;
 }
 
 .off-screen-fixed {
@@ -88,6 +111,7 @@
   height: 70px;
   display: flex;
   transition: 0.3s;
+  margin: 0 20px;
 }
 
 .logo::before {
@@ -134,6 +158,7 @@
 .search-wraper {
   display: flex;
   align-items: center;
+  margin-right: 20px;
 }
 .search-wraper .header-search-lupa {
   background-color: inherit;
@@ -304,7 +329,6 @@
     color: white;
     font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
     border-radius: 5px;
-    margin-left: 25px;
   }
   .header-mobile-button img {
     position: relative;
