--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ body::-webkit-scrollbar-thumb {
   max-width: 1350px;
   margin: 0 auto;
   margin-bottom: 20px;
+  min-height: 60vh;
 }
 
 .captcha-window {
