--- a/src/app.scss
+++ b/src/app.scss
@@ -75,6 +75,7 @@ body::-webkit-scrollbar-thumb {
   max-width: 1350px;
   margin: 0 auto;
   margin-bottom: 20px;
+  min-height: 60vh;
 }
 .captcha-window {
   position: absolute;
