--- a/src/app.scss
+++ b/src/app.scss
@@ -62,6 +62,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px; /* закругления плашки */
   width: 10px;
 }
+
 .okami {
   color: white;
   font-family:
@@ -76,6 +77,8 @@ body::-webkit-scrollbar-thumb {
   margin: 0 auto;
   margin-bottom: 20px;
   min-height: 60vh;
+  overflow: hidden;
+  transition: 0.3s;
 }
 .captcha-window {
   position: absolute;
