--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,10 +5,8 @@
   width: 100vw;
   height: 60px;
   color: white;
-  display: flex;
   border-top: 2px solid #3ce3e8;
   border-bottom: 2px solid #3ce3e8;
-  align-items: center;
   font-family: "Inter", sans-serif;
   /* gap: 25px; */
   top: 0;
@@ -32,6 +30,15 @@
     background-color: $base-light-blue;
     color: #000000;
   }
+}
+.header-wrpaer {
+  max-width: 1700px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  height: 100%;
 }
 .header-mobile-button {
   display: none;
