--- a/src/components/signup-page/signupPage.css
+++ b/src/components/signup-page/signupPage.css
@@ -62,6 +62,9 @@
   width: 450px;
   margin: 0 auto;
   font-size: 16px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .personal-info-cb {
