--- a/src/components/mobile-meu/mobileMenu.css
+++ b/src/components/mobile-meu/mobileMenu.css
@@ -20,6 +20,7 @@
   transition: 0.6s;
   z-index: 1000000;
   animation: menu-appear 0.5s;
+  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 }
 
 .mobile-menu.hide {
