--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -22,8 +22,9 @@ button {
   height: -moz-fit-content;
   height: fit-content;
   padding: 15px;
-  min-width: 73.5vw;
+  width: 73.5vw;
   min-height: 70vh;
+  max-width: 1920px;
 }
 
 .title-info {
@@ -32,7 +33,8 @@ button {
   gap: 20px;
   height: -moz-min-content;
   height: min-content;
-  min-width: 55vw;
+  width: 55vw;
+  max-width: 1920px;
 }
 .title-info .tag {
   color: #3ce3e8;
@@ -121,7 +123,7 @@ button {
   height: -moz-fit-content;
   height: fit-content;
   width: 55vw;
-  max-width: 55vw;
+  max-width: 1500px;
 }
 .title-info .title-text-info .title-name {
   font-size: 35px;
@@ -247,6 +249,7 @@ button {
   align-items: center;
   flex-direction: column;
   width: 65vw;
+  max-width: 1700px;
   margin: 0 auto;
 }
 .player-wraper .player,
@@ -260,6 +263,8 @@ button {
   border-bottom: 2px solid #3ce3e8;
   border-right: 2px solid #3ce3e8;
   border-left: 1px solid #3ce3e8;
+  width: 65vw;
+  max-width: 1700px;
 }
 .player-wraper .player body,
 .player-wraper .player-placeholder body {
@@ -354,6 +359,7 @@ button {
   gap: 15px;
   height: 50px;
   width: inherit;
+  max-width: 1700px;
   align-items: center;
 }
 
@@ -398,6 +404,8 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 60vw;
+  max-width: 1600px;
 }
 
 .comments-styles {
@@ -429,6 +437,7 @@ button {
   padding-top: 10px;
   padding-left: 10px;
   font-size: 15px;
+  max-width: 1700px;
 }
 
 .comment-input:focus {
@@ -472,6 +481,8 @@ button {
   justify-content: center;
   box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
   padding: 5px;
+  width: 60vw;
+  max-width: 1700px;
 }
 .comments .comment {
   height: 150px;
@@ -479,6 +490,8 @@ button {
   background-color: #064b8c;
   display: flex;
   gap: 20px;
+  width: 65vw;
+  max-width: 1700px;
 }
 .comments .comment .prof-pic {
   height: 100px;
