--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -9,8 +9,9 @@
 }
 .season-anime .season-anime-title::before {
   content: url(../img/season.svg);
+  margin-right: 10px;
   position: relative;
-  right: 10px;
+  top: 3px;
 }
 
 .season-titles,
