--- a/src/components/catalogue-page/Pagination/Pagination.scss
+++ b/src/components/catalogue-page/Pagination/Pagination.scss
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  max-width: 100vw;
+  max-width: 1280px;
 }
 .pagination-load-more {
   width: 50vw;
