--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -1,3 +1,10 @@
+.main {
+  width: 70vw;
+  max-width: 1350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .season-anime {
   max-width: 70vw;
 }
