--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -1,5 +1,11 @@
 @import "../../stylsheet.scss";
 
+.main {
+  width: 70vw;
+  max-width: 1350px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .season-anime {
   max-width: 70vw;
   .season-titles {
