comments and reg fix

--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -159,6 +159,9 @@ button {
   line-height: 25px;
   padding: 10px 10px 0 10px;
 }
+.title-desc p {
+  margin-bottom: 10px;
+}
 
 .title-desc.hide {
   max-height: 120px;
