--- a/src/App.css
+++ b/src/App.css
@@ -116,4 +116,4 @@ body::-webkit-scrollbar-thumb {
     min-height: 80vh;
     max-width: 1350px;
   }
-}/*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=App.css.map */
