--- a/src/components/title-page/title-page.scss
+++ b/src/components/title-page/title-page.scss
@@ -525,7 +525,7 @@ button {
     img {
       max-width: 400px;
       min-height: 400px;
-      display: inline-block;
+      display: block;
     }
     button {
       display: inline-block;
