--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -350,6 +350,11 @@
   height: 30px;
 }
 
+.up-button.anim {
+  animation-name: disappear-button;
+  animation-duration: 0.6s;
+}
+
 @media (max-width: 1100px) {
   .header-mobile-button {
     display: inline-flex;
@@ -447,5 +452,15 @@
   100% {
     opacity: 1;
     scale: 1;
+  }
+}
+@keyframes disappear-button {
+  0% {
+    opacity: 1;
+    scale: 1;
+  }
+  100% {
+    opacity: 0;
+    scale: 0;
   }
 }/*# sourceMappingURL=header.css.map */
