profile page and catalogue page fixed

--- a/src/components/profile-page/profile-page.scss
+++ b/src/components/profile-page/profile-page.scss
@@ -11,13 +11,26 @@
   border: 1px solid $base-light-blue;
   border-radius: 10px;
   overflow: hidden;
-  max-width: 1350px;
+  max-width: 800px;
+  max-height: 600px;
+}
+.profile-head {
+  height: 180px;
+}
+.profile-settings {
+  background: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  img {
+    width: 30px;
+    height: 30px;
+  }
 }
 .profile-head-background {
   width: 40vw;
   height: 150px;
   object-fit: cover;
-  margin-bottom: 40px;
 }
 .prof-pic-wrap {
   width: 100px;
@@ -25,13 +38,18 @@
   border-radius: 50%;
   border: 1px solid $base-light-blue;
   overflow: hidden;
-  position: absolute;
-  top: 235px;
-  left: 600px;
+  position: relative;
+  bottom: 80px;
+  left: 10px;
 }
 .profile-pic {
   margin-left: 0;
   width: 100px;
   height: 100px;
   object-fit: fill;
+}
+.profile-main {
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 200px 1.5fr 1fr;
 }
