--- a/src/components/catalogue-page/catalogue-page.scss
+++ b/src/components/catalogue-page/catalogue-page.scss
@@ -361,19 +361,25 @@
   display: none;
 }
 @media (max-width: 1100px) {
+  .wraper-wrapera {
+    width: 100%;
+    position: fixed;
+    height: 100%;
+    z-index: 10000;
+    top: 100px;
+  }
   body {
     .filters-wraper {
-      position: absolute;
+      animation-name: filter-appear;
+      animation-duration: 0.5s;
+      margin-left: auto;
+      margin-right: auto;
+      z-index: 1000000;
     }
     .filters-wraper.closed {
       display: none;
     }
     .filters-wraper.open {
-      display: block;
-      position: fixed;
-      top: 10vh;
-      left: 15vw;
-      z-index: 1000000;
       background-color: rgba(6, 75, 140, 1);
       color: white;
       font-family:
@@ -432,5 +438,15 @@
     top: 0;
     z-index: 100000;
     opacity: 0.7;
+  }
+}
+@keyframes filter-appear {
+  from {
+    opacity: 0;
+    transform: translatey(-0px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
