--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -157,6 +157,11 @@
   }
 }
 @media (max-width: 1100px) {
+  .season-title {
+    .title-name-tags {
+      margin-left: 15px;
+    }
+  }
   .title-main {
     display: flex;
     background-color: $background-trans;
@@ -180,20 +185,21 @@
       display: none;
     }
     .name {
-      font-size: 18px;
+      font-size: 16px;
       max-width: 220px;
       font-weight: 700;
-      max-height: 55px;
     }
   }
   .title-name-tags {
     display: flex;
     padding-top: 15px;
-    width: 65%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    margin-left: 5px;
+    padding: 5px;
+    .name {
+      max-height: 80px;
+    }
   }
   .title-episodes {
     position: static;
