--- a/src/components/profile-page/profile-page.css
+++ b/src/components/profile-page/profile-page.css
@@ -8,7 +8,23 @@
   border: 1px solid #3ce3e8;
   border-radius: 10px;
   overflow: hidden;
-  max-width: 1350px;
+  max-width: 800px;
+  max-height: 600px;
+}
+
+.profile-head {
+  height: 180px;
+}
+
+.profile-settings {
+  background: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+}
+.profile-settings img {
+  width: 30px;
+  height: 30px;
 }
 
 .profile-head-background {
@@ -16,7 +32,6 @@
   height: 150px;
   -o-object-fit: cover;
      object-fit: cover;
-  margin-bottom: 40px;
 }
 
 .prof-pic-wrap {
@@ -25,9 +40,9 @@
   border-radius: 50%;
   border: 1px solid #3ce3e8;
   overflow: hidden;
-  position: absolute;
-  top: 235px;
-  left: 600px;
+  position: relative;
+  bottom: 80px;
+  left: 10px;
 }
 
 .profile-pic {
@@ -36,4 +51,10 @@
   height: 100px;
   -o-object-fit: fill;
      object-fit: fill;
+}
+
+.profile-main {
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 200px 1.5fr 1fr;
 }/*# sourceMappingURL=profile-page.css.map */
