--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -153,6 +153,9 @@
 }
 
 @media (max-width: 1100px) {
+  .season-title .title-name-tags {
+    margin-left: 15px;
+  }
   .title-main {
     display: flex;
     background-color: rgba(6, 75, 140, 0.8);
@@ -177,19 +180,20 @@
     display: none;
   }
   .title-main .name {
-    font-size: 18px;
+    font-size: 16px;
     max-width: 220px;
     font-weight: 700;
-    max-height: 55px;
   }
   .title-name-tags {
     display: flex;
     padding-top: 15px;
-    width: 65%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    margin-left: 5px;
+    padding: 5px;
+  }
+  .title-name-tags .name {
+    max-height: 80px;
   }
   .title-episodes {
     position: static;
