--- a/src/components/catalogue-page/catalogue-page.scss
+++ b/src/components/catalogue-page/catalogue-page.scss
@@ -394,10 +394,7 @@
     .catalogue-search {
       width: 90vw;
     }
-    .title-main {
-      width: 90%;
-      height: fit-content;
-    }
+
     .search-and-titles {
       width: 90vw;
     }
@@ -406,10 +403,14 @@
       flex-direction: column;
       height: fit-content;
       min-height: fit-content;
-      padding: 5px;
       align-items: center;
       min-height: 90vh;
       min-width: 90vw;
+      padding: 10px;
+      .catalogue-page-title {
+        width: 100%;
+        margin-bottom: 10px;
+      }
     }
     .input-title {
       display: block;
@@ -438,6 +439,18 @@
     top: 0;
     z-index: 100000;
     opacity: 0.7;
+  }
+  .catalogue-page-title {
+    .title-poster-wraper {
+      min-width: 100px;
+    }
+    .poster {
+      width: 100px;
+      height: 150px;
+    }
+    .title-name-tags {
+      width: 100%;
+    }
   }
 }
 @keyframes filter-appear {
