--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -148,7 +148,7 @@
   scale: 1.03;
 }
 
-.catalogue-page .titles-wraper .catalogue-page-title {
+.catalogue-page .catalogue-page-title {
   width: 190px;
 }
 
