some hooks added

--- a/src/components/feedbeackPage/Feedback.scss
+++ b/src/components/feedbeackPage/Feedback.scss
@@ -1,5 +1,5 @@
 .feedback {
-  position: absolute;
+  position: fixed;
   background-color: rgba(5, 49, 90, 1);
   top: 150px;
   z-index: 100000000;
